cmake_minimum_required(VERSION 3.20)
project(MyHackerRank)

set(CMAKE_CXX_STANDARD 14)

add_executable(MyHackerRank InterviewPreparationKit/Sales_by_match.cpp)
#add_executable(MyHackerRank C++/array_introduction.cpp)
#add_executable(MyHackerRank C++/attribute_parser.cpp)
#add_executable(MyHackerRank C++/attribute_parser2.cpp)
#add_executable(MyHackerRank C++/basic_data_types.cpp)
#add_executable(MyHackerRank C++/box_it.cpp)
#add_executable(MyHackerRank C++/class.cpp)
#add_executable(MyHackerRank C++/classs_and_objects.cpp)
#add_executable(MyHackerRank C++/conditional_statements.cpp)
#add_executable(MyHackerRank C++/for_loop.cpp)
#add_executable(MyHackerRank C++/functions.cpp)
#add_executable(MyHackerRank C++/inherited_code.cpp)
#add_executable(MyHackerRank C++/lower-bound-stl.cpp)
#add_executable(MyHackerRank C++/maps-stl.cpp)
#add_executable(MyHackerRank C++/pointer.cpp)
#add_executable(MyHackerRank C++/strings.cpp)
#add_executable(MyHackerRank C++/stringstream.cpp)
#add_executable(MyHackerRank C++/struct.cpp)
#add_executable(MyHackerRank C++/variable_sized_array.cpp)